--- a/trabalhoGrafos/mainwindow.ui
+++ b/trabalhoGrafos/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>447</width>
-    <height>309</height>
+    <width>441</width>
+    <height>342</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -79,10 +79,10 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>140</y>
+      <x>100</x>
+      <y>150</y>
       <width>251</width>
-      <height>111</height>
+      <height>179</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -94,7 +94,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Numero de Iterações:</string>
+          <string>Máximo de Iterações </string>
          </property>
         </widget>
        </item>
@@ -124,7 +124,7 @@
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Partição em</string>
+          <string>Clusters (K)</string>
          </property>
         </widget>
        </item>
@@ -144,11 +144,44 @@
       </layout>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string>K-means!!</string>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="spacing">
+        <number>5</number>
        </property>
-      </widget>
+       <item>
+        <widget class="QPushButton" name="kmeansBtn">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>K-means!!</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="mostraListaBtn">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Mostrar Lista Adjacente</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="salvaBtn">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Salvar</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </widget>
@@ -158,7 +191,7 @@
       <x>140</x>
       <y>80</y>
       <width>160</width>
-      <height>51</height>
+      <height>66</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -184,19 +217,6 @@
       </widget>
      </item>
     </layout>
-   </widget>
-   <widget class="QPushButton" name="salvaBtn">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>260</y>
-      <width>251</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Salvar</string>
-    </property>
    </widget>
   </widget>
  </widget>
