--- a/trabalhoGrafos/mainwindow.ui
+++ b/trabalhoGrafos/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>441</width>
-    <height>368</height>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,11 @@
       <number>5</number>
      </property>
      <item>
-      <widget class="QLineEdit" name="arquivoEdit"/>
+      <widget class="QLineEdit" name="arquivoEdit">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="pushButton">
@@ -79,10 +83,10 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>150</y>
-      <width>251</width>
-      <height>205</height>
+      <x>80</x>
+      <y>180</y>
+      <width>262</width>
+      <height>245</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -146,6 +150,13 @@
      <item>
       <layout class="QHBoxLayout" name="checkBoxLayout">
        <item>
+        <widget class="QCheckBox" name="distanciaCheckbox">
+         <property name="text">
+          <string>Distancia Euclidiana</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="colorirCheckbox">
          <property name="text">
           <string>Colorir o grafo</string>
@@ -172,6 +183,16 @@
          </property>
          <property name="text">
           <string>K-means!!</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="salvaClustersBtn">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Salva Clusters</string>
          </property>
         </widget>
        </item>
@@ -215,7 +236,7 @@
       <x>140</x>
       <y>80</y>
       <width>160</width>
-      <height>66</height>
+      <height>83</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -241,6 +262,32 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>160</y>
+      <width>401</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>401</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
    </widget>
   </widget>
  </widget>
